# Ghana_Legal_AI

./: .gitignore  ARCHITECTURE.md  COLAB_INSTRUCTIONS.md  DEPLOYMENT.md  FINE_TUNING_STRATEGY.md  Makefile  README.md  SUBSTACK_DRAFT.md  docker-compose.yml  ghana_legal_finetune.json  ghana_legal_finetune_expanded.json  package-lock.json  test_alchemy.py  test_db.py
legal-api/: .env.example  modal_app.py  pyproject.toml  requirements.txt
legal-api/.deepeval/: .deepeval_telemetry.txt
legal-api/benchmark/: __init__.py  ablation.py  harness.py  report.py  run_benchmark.py
legal-api/benchmark/dataset/: __init__.py  legalbench_gh.json  legalbench_gh_small.json  schema.py
legal-api/benchmark/metrics/: __init__.py  legal.py  standard.py
legal-api/benchmark/results/: results.json  results_table.tex
legal-api/benchmark/runners/: __init__.py  base.py  groq_runner.py  ollama_runner.py  openai_runner.py
legal-api/data/: legal_experts.json
legal-api/src/.deepeval/: .deepeval_telemetry.txt
legal-api/src/ghana_legal/: __init__.py  config.py
legal-api/src/scratch/: reset_pipeline_manifest.py  wipe_qdrant.py
legal-api/src/scripts/: debug_mongo.py  discover_cases.py  download_constitution.py  generate_case_qa.py  generate_training_data.py  ingest_cases_to_chroma.py  ingest_constitution_to_qdrant.py  ingest_data.py  ingest_to_qdrant.py  (+4 more)
legal-api/tests/: conftest.py  test_legal_ai_eval.py  test_validator.py
legal-api/tools/: call_agent.py  create_long_term_memory.py  delete_long_term_memory.py  download_cases.py  evaluate_agent.py  generate_evaluation_dataset.py
(+99 files in other folders)
